# YouTube-Music-Desktop

./: .gitignore  README.md  package.json  vite.config.ts
src/: package.json
src-tauri/: Cargo.toml  src-tauri.rs  tauri.conf.json
src-tauri/plugins/: mod.rs
src-tauri/plugins/example-plugin/: Cargo.toml  README.md  lib.rs
src-tauri/src/: main.rs
src/src/: index.html  main.js  style.css
